# ddi_gnn_explainability

./: .gitignore  Dockerfile  README.md  config.yaml  convert_to_pdf.py  pyproject.toml  requirements.txt
docs/: ddi_ben.md  full.md  paper_comparison.md
explanations/: __init__.py  attention_rollout.py  gnnexplainer_wrapper.py  kec.py  pgexplainer_wrapper.py
faithfulness/: __init__.py  evaluate.py  metrics.py
models/: gat_ddi.py  gt_ddi.py
notebooks/: 00_end_to_end_pipeline.ipynb  01_explore_kg.ipynb  02_faithfulness_plots.ipynb  03_usability_analysis.ipynb
paper/: cover_letter.txt  reviewer_feedback.md  reviewer_responses.md  thesis_chapter_5_draft.md
raw/: analysis.html  ddi_thesis_abstract.html  masters_thesis_ddi_gnn_explainability.html
results/: ablation_results.csv  faithfulness_results.csv  kec_validation.txt  per_class_metrics.csv  pgexplainer_diagnostic.txt  raw_faithfulness_scores.csv  test_metrics.json
scratch/: adjust_scores.py  calculate_overlap.py  test_gt.py  update_notebook.py  update_notebook_step3.py  update_notebook_step3_importlib.py  update_notebook_step3_reload.py  update_notebook_step4.py  update_responses.py  verify_bug.py
scripts/: 01_download_data.py  02_build_kg.py  03_train_gat.py  03_train_gt.py  04_explain_methods.py  05_faithfulness.py  06_visualise.py  ablation_significance.py  compare_results.py  diagnose_graph.py  diagnose_pgexplainer.py  run_ablations.py  statistical_significance.py  validate_kec_approximation.py
tests/: test_model_dependence.py
usability/: analyze_responses.py  survey_interface.html  (+1 more)
(+3 files in other folders)
