[project]
name = "ddi-gnn-explainability"
version = "0.1.0"
description = "Explainable Graph Neural Networks for Drug-Drug Interaction Prediction"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "torch-scatter",
    "torch-sparse",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "networkx>=2.8",
    "pyyaml>=6.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
